--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
 
+<html>
+
+<head>
+    <title>Henry Liu</title>
+    <meta name="description" content="Hi! My name is Henry Liu. Welcome to my personal portfolio">
+
+    <link rel="stylesheet" href="src/style.css">
+</head>
+
+
+<body>
+    <section class="small_section">
+        <h1 class="rotate">Yo its ya boi Henry!</h1>
+    </section>
+</body>
+
+
+</html>
