--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
           change_size('red-small', '11em', '112.5em', '65em');
           change_size3('shadow-red', '9em', '112.5em', '65em', 'inset 0 0 5em 1.25em #FFD3E8, 0 0 5em 2.5em #FFD3E8');
           fade_out('more')"
+
+          onclick="scroll_to('more-h')"
           ></div>
       </div>
     </div>
@@ -175,10 +177,10 @@
 
       <div class="project-container">
         <div class="project-summary">
-          <h2>Stroke Classification</h2>
+          <h2>Stroke Classification Model</h2>
           <img src="images/abstract.png" class="project-thumbnail">
           <div class="buttons">
-            <a href="https://youtu.be/8mqAh9MTTdo">
+            <a href="documents/Liu_Slides_and_Poster.pdf" target="_blank">
               <div class="project-button"><p>Presentation</p></div>
             </a>
             <a href="https://github.com/HenryLiu714/stroke_classification_network" target="_blank">
@@ -218,10 +220,10 @@
           <h2>Graph Traversal Visualization</h2>
           <img src="images/maze.gif" class="project-thumbnail">
           <div class="buttons">
-            <a href="https://youtu.be/8mqAh9MTTdo">
+            <a href="https://youtu.be/8mqAh9MTTdo" target="_blank">
               <div class="project-button"><p>Demo</p></div>
             </a>
-            <a href="https:github.com">
+            <a href="https://github.com/HenryLiu714/maze-traversal" target="_blank">
               <div class="project-button"><p>Source</p></div>
             </a>
           </div>
@@ -247,10 +249,93 @@
     </div>
 
     <h2 class="quote"><i>When you come out of the storm, you won’t be the same person who walked in. That’s what this storm’s all about.</i></h2>
+
+    <hr id="more-h">
+
+    <div id="more-section">
+      <h1>And everything else...</h1>
+      <div id="more-container">
+        <div class="more-box">
+          <h2>Skills and Interests</h2>
+          <div class="items">
+            <div class="item1">
+              <p>C/C++</p>
+            </div>
+            <div class="item1">
+              <p>Python</p>
+            </div>
+            <div class="item1">
+              <p>Java</p>
+            </div>
+            <div class="item1">
+              <p>HTML/CSS</p>
+            </div>
+            <div class="item1">
+              <p>Javascript</p>
+            </div>
+            <div class="item2">
+              <p>Data Science</p>
+            </div>
+            <div class="item2">
+              <p>Algorithms</p>
+            </div>
+            <div class="item2">
+              <p>Software Design</p>
+            </div>
+            <div class="item2">
+              <p>OOP</p>
+            </div>
+            <div class="item3">
+              <p>GIT</p>
+            </div>
+            <div class="item3">
+              <p>Pandas</p>
+            </div>
+            <div class="item3">
+              <p>MatPlotLib</p>
+            </div>
+            <div class="item3">
+              <p>SQLite</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="more-box">
+          <h2>Education</h2>
+          <div class="items">
+            <div class="item1">
+              <p>Algorithms</p>
+            </div>
+            <div class="item2">
+              <p>Real Analysis</p>
+            </div>
+            <div class="item1">
+              <p>OOP Design Concepts</p>
+            </div>
+            <div class="item2">
+              <p>Calculus IV</p>
+            </div>
+            <div class="item2">
+              <p>Discrete Math</p>
+            </div>
+            <div class="item2">
+              <p>Linear Algebra</p>
+            </div>
+             <div class="item2">
+              <p>Probability Theory</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="quote"><i>A certain type of perfection can only be realized through a limitless accumulation of the imperfect.</i></h2>
     <hr>
 
     <div class="footer">
+      <img src=images/hobbes.png style="width: 8%;">
       <p><i>It's a magical world, Hobbes, ol' buddy...<br>...Let's go exploring!</i></p>
+      <img src=images/calvin.png style="width: 8%;">
     </div>
   </body>
 
