--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <h1>Henry Liu</h1>
         <h2>Student @ UMass Amherst</h2>
       </div>
-
-
+        <p id="resume" onmouseover="change_size('arrow', '2em', '180.5em', '91em')" onmouseout="change_size('arrow', '2em', '180em', '91em')"><a href="documents/resume2.pdf" target="_blank">View my resume</a></p>
+        <img src="images/arrow.png" id="arrow">
+      
       <div id="contact-banner">
         <a href="https:github.com/henryliu714" target="_blank"><image src="images/icons/github.png" class="icon"></a>
         <a href="https://www.linkedin.com/in/henry-liu-a43859216/" target="_blank"><image src="images/icons/linkedin.png" class="icon"></a>
@@ -168,8 +169,8 @@
               programmed with Python3 (<a href="https://github.com/HenryLiu714/sky-spectre-beta" target="_blank">here</a>). The current version implements the following features:</p>
               <ul>
                 <li><a href="https://www.chessprogramming.org/Bitboards.com" target="_blank">Bitboard</a> based game-state representation</li>
-                <li>Fast move generation using bit manipulations</li>
-                <li>Min-max move search algorithm optimized with alpha-beta pruning</li>
+                <li>Fast move generation using <strong>bit manipulations</strong></li>
+                <li><strong>Min-max move search</strong> algorithm optimized with <strong>alpha-beta pruning</strong></li>
               </ul>
           </div>
         </div>
@@ -208,9 +209,50 @@
             <p>A machine learning model developed as a part of a research project with the goal of implementing neural networks to quickly identify strokes, as well as classify them into the correct <a href="https://www.hopkinsmedicine.org/health/conditions-and-diseases/stroke/types-of-stroke" target="_blank">sub-category</a>. The project in its entirety required:</p>
             <ul>
               <li>Thorough data pruning and normalization using publicly available databases</li>
-              <li>Construction of the neural network using Python3 and the Keras and Tensorflow APIs</li>
+              <li>Construction of the neural network using <strong>Python3</strong> and the <strong>Keras</strong> and <strong>Tensorflow</strong> APIs</li>
             </ul>
             <p>A complete version of the final thesis may be found <a href="documents/Liu_Thesis_Final.pdf" target="_blank">here</a>.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="project-container">
+        <div class="project-summary">
+          <h2>EmployBee</h2>
+          <img src="images/employbee.png" class="project-thumbnail">
+          <div class="buttons">
+            <a href="documents/AFGPoster.pdf" target="_blank">
+              <div class="project-button"><p>Presentation</p></div>
+            </a>
+
+            <a href="https://github.com/CamWhiting12/EmployBee" target="_blank">
+              <div class="project-button"><p>Source</p></div>
+            </a>
+          </div>
+          
+        </div>
+
+        <div class="project-description">
+          <div class="skills">
+            <div class="skill">
+              <p>Kotlin</p>
+            </div>
+
+            <div class="skill">
+              <p>Android Studio</p>
+            </div>
+
+            <div class="skill">
+              <p>SQL</p>
+            </div>
+          </div>
+
+          <div class="description">
+            <p>An android app designed for small business owners seeking centralized management. Developed with Android Studio and Kotlin, EmployBee allows for seamless communication between an employer and employees, including features such as:</p>
+            <ul>
+              <li>Customizable protocol search engine powered by an <strong>SQLite</strong> database as an alternative to employee handbooks</li>
+              <li>Automatically refreshing and updateable shift-specific tasks stored in <strong>SQLite</strong> database</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -297,6 +339,9 @@
             <div class="item3">
               <p>SQLite</p>
             </div>
+            <div class="item3">
+              <p>Office 365 </p>
+            </div>
           </div>
         </div>
 
@@ -325,6 +370,14 @@
               <p>Probability Theory</p>
             </div>
           </div>
+        </div>
+
+        <div class="more-box">
+          <h2>Awards and Honors</h2>
+          <ul>
+            <li><strong>Third place</strong> at the Massachusetts Society for Medical Research Student Competition</li>
+            <li>International Math Modeling Contest(IMMC) United States <strong>Finalist</strong></li>
+          </ul>
         </div>
       </div>
     </div>
