--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p id="resume" onmouseover="change_size('arrow', '2em', '180.5em', '91em')" onmouseout="change_size('arrow', '2em', '180em', '91em')"><a href="documents/resume2023.pdf" target="_blank">View my resume</a></p>
         <img src="images/arrow.png" id="arrow">
       <div id="contact-banner">
-        <a href="https:github.com/henryliu714" target="_blank"><image src="images/icons/github.png" class="icon"></a>
+        <a href="https://github.com/henryliu714" target="_blank"><image src="images/icons/github.png" class="icon"></a>
         <a href="https://www.linkedin.com/in/henry-liu-a43859216/" target="_blank"><image src="images/icons/linkedin.png" class="icon"></a>
         <a href="mailto: henliu@umass.edu"><image src="images/icons/email.png" class="icon"></a>
       </div>
