--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
 
         <div class="project-description">
           <div class="skills">
+            <img src="images/ribbon.png" style="width: 3em; margin-right: 1em">
             <div class="skill">
               <p>Python</p>
             </div>
@@ -232,6 +233,52 @@
               <li>Construction of the neural network using <strong>Python3</strong> and the <strong>Keras</strong> and <strong>Tensorflow</strong> APIs</li>
             </ul>
             <p>A complete version of the final thesis may be found <a href="documents/Liu_Thesis_Final.pdf" target="_blank">here</a>.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="project-container">
+        <div class="project-summary">
+          <h2>Graphity</h2>
+          <img src="images/graphity.png" class="project-thumbnail">
+          <div class="buttons">
+            <a href="https://graphity.tech" target="_blank">
+            <div class="project-button"><p>Try it out!</p></div>
+          </a>
+          <a href="https://github.com/waiwasabi/hack2023" target="_blank">
+            <div class="project-button"><p>Source</p></div>
+          </a>
+          </div>
+          
+        </div>
+
+        <div class="project-description">
+          <div class="skills">
+            <img src="images/ribbon.png" style="width: 3em; margin-right: 1em">
+            <div class="skill">
+              <p>React.js</p>
+            </div>
+
+            <div class="skill">
+              <p>TypeScript</p>
+            </div>
+
+            <div class="skill">
+              <p>GIT</p>
+            </div>
+
+            <div class="skill">
+              <p>D3.js</p>
+            </div>
+          </div>
+
+          <div class="description">
+            <p><a href="https://graphity.tech" target="_blank">Graphity</a> is a graph visualization web application created for <a href="https://hackumass.com/" target="_blank">HackUMass XI</a> using <strong>React.js</strong> and <strong>TypeScript.</strong> The website is targetted at students and developers alike to easier understand, create, and implement graphs and graph algorithms in their programs. Its features include</p>
+            <ul>
+              <li>User-friendly drag-and-drop interface for graph creation and manipulation</li>
+              <li>Built-in code editor and IDE for operations on the user created graph</li>
+              <li>JSON generation for user-created graph for personal use</li>
+            </ul>
           </div>
         </div>
       </div>
