Updated projects and resume

--- a/index.html
+++ b/index.html
@@ -153,6 +153,43 @@
 
     <div id="projects-section">
       <h1>Projects</h1>
+      
+      <div class="project-container">
+        <div class="project-summary">
+          <h2>Backtesting Suite</h2>
+          <img src="images/plot.png" class="project-thumbnail">
+          <a href="https://github.com/HenryLiu714/BackTester" target="_blank">
+            <div class="project-button"><p>Source</p></div>
+          </a>
+        </div>
+
+        <div class="project-description">
+          <div class="skills">
+            <div class="skill">
+              <p>C/C++</p>
+            </div>
+
+            <div class="skill">
+              <p>Python</p>
+            </div>
+
+            <div class="skill">
+              <p>MySQL</p>
+            </div>
+          </div>
+
+          <div class="description">
+            <p>An event-driven backtesting suite meant to simulate historical trading environments for the development
+              of algorithmic trading strategies. The program draws inspiration from the equities backtester outlined
+              in <a href="https://www.quantstart.com/successful-algorithmic-trading-ebook/" target="_blank">Successful Algorithmic Trading</a> by Michael
+              Halls-Moore and the <a href="https://github.com/kernc/backtesting.py" target="_blank">Backtesting.py</a> framework. 
+            </p>
+            <p>
+              The program is written in C++ and uses Python scripts and a MySQL database to store historical securities data.
+            </p>
+          </div>
+        </div>
+      </div>
 
       <div class="project-container">
         <div class="project-summary">
