Added sentiment analysis project

--- a/index.html
+++ b/index.html
@@ -363,6 +363,40 @@
 
       <div class="project-container">
         <div class="project-summary">
+          <h2>Sentiment Analysis Trading</h2>
+          <img src="images/sent_plot.png" class="project-thumbnail">
+          <a href="https://github.com/HenryLiu714/Sentiment-Analysis-Model" target="_blank">
+            <div class="project-button"><p>Source</p></div>
+          </a>
+        </div>
+
+        <div class="project-description">
+          <div class="skills">
+            <div class="skill">
+              <p>Python</p>
+            </div>
+  
+            <div class="skill">
+              <p>NLP</p>
+            </div>
+  
+            <div class="skill">
+              <p>Data Science/Machine Learning</p>
+            </div>
+          </div>
+
+          <div class="description">
+            <p>A sentiment analysis trading strategy created to test the viability of making trades based off 
+            of data collected from tweets. Tweets were gathered and cleaned before being used to create a model 
+            that would predict the sentiment of the market. The model would then make trades based off of 
+            the sentiment. The project was back tested over a year and shows promise, resulting in <strong>38% returns</strong>, outperforming 
+            the S&P 500 by 2.53 times.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="project-container">
+        <div class="project-summary">
           <h2>Graph Traversal Visualization</h2>
           <img src="images/maze.gif" class="project-thumbnail">
           <div class="buttons">
@@ -393,7 +427,7 @@
         </div>
       </div>
     </div>
-
+    
     <h2 class="quote"><i>When you come out of the storm, you won’t be the same person who walked in. That’s what this storm’s all about.</i></h2>
 
     <hr id="more-h">
