--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
       <title>Henry Liu</title>
+      <link rel="icon" href="images/icons/snoopy_icon.jpg">
       <meta name="description" content="Hi! My name is Henry Liu. Welcome to my personal portfolio">
 
       <link rel="stylesheet" href="src/style.css">
