--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Henry Liu</h1>
         <h2>Student @ UMass Amherst</h2>
       </div>
-        <p id="resume" onmouseover="change_size('arrow', '2em', '180.5em', '91em')" onmouseout="change_size('arrow', '2em', '180em', '91em')"><a href="documents/resume2023.pdf" target="_blank">View my resume</a></p>
+        <p id="resume" onmouseover="change_size('arrow', '2em', '180.5em', '91em')" onmouseout="change_size('arrow', '2em', '180em', '91em')"><a href="documents/Henry_Liu_Resume.pdf" target="_blank">View my resume</a></p>
         <img src="images/arrow.png" id="arrow">
       <div id="contact-banner">
         <a href="https://github.com/henryliu714" target="_blank"><image src="images/icons/github.png" class="icon"></a>
